<resources>
    <string name="app_name">Motivation</string>
    <string name="vamos_come_ar">Vamos começar?</string>
    <string name="qual_o_seu_nome">Qual o seu nome?</string>
    <string name="salvar">Salvar</string>
    <string name="gerar_nova_frase">Gerar nova frase</string>
    <string name="clique_no_botao_para_gerar_uma_frase">Clique no botao para gerar uma frase</string>
    <string name="sair">Sair</string>
</resources>