<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="40dp"
    tools:context=".ui.activities.SplashActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/vamos_come_ar"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/qual_o_seu_nome"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textFontWeight="700"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/salvar"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"
        android:textColor="@color/white"/>

</RelativeLayout>